Listo para construcción de robot bombero description

--- a/robot_bombero_vision/package.xml
+++ b/robot_bombero_vision/package.xml
@@ -14,10 +14,13 @@
   <exec_depend>cv_bridge</exec_depend>
 
   <!-- Dependencias para procesamiento de imágenes -->
-  <exec_depend>opencv-python</exec_depend>
+  <exec_depend>python3-opencv</exec_depend>
+
 
   <!-- Dependencia para pruebas unitarias (si se quiere usar) -->
-  <exec_depend>pytest</exec_depend>
+  <exec_depend>python3-pytest</exec_depend>
+  <exec_depend>python3-opencv</exec_depend>
+
 
   <test_depend>ament_copyright</test_depend>
   <test_depend>ament_flake8</test_depend>
