--- a/robot_bombero_controller/CMakeLists.txt
+++ b/robot_bombero_controller/CMakeLists.txt
@@ -50,4 +50,7 @@ install(FILES
   DESTINATION share/${PROJECT_NAME}
 )
 
+ament_export_include_directories(include)
+ament_export_libraries(mecanum_controller arm_servo_controller)
+
 ament_package()
