--- a/robot_bombero_hardware/package.xml
+++ b/robot_bombero_hardware/package.xml
@@ -6,14 +6,18 @@
   <description>TODO: Package description</description>
   <maintainer email="sofia.castano@uao.edu.co">sofia</maintainer>
   <license>TODO: License declaration</license>
-  
+
   <buildtool_depend>ament_cmake</buildtool_depend>
+
+  <test_depend>ament_lint_auto</test_depend>
+  <test_depend>ament_lint_common</test_depend>
 
   <depend>hardware_interface</depend>
   <depend>pluginlib</depend>
   <depend>rclcpp</depend>
 
   <export>
+    <build_type>ament_cmake</build_type>
     <pluginlib plugin="${prefix}/pluginlib.xml"/>
   </export>
 </package>
