--- a/robot_bombero_safety/CMakeLists.txt
+++ b/robot_bombero_safety/CMakeLists.txt
@@ -1,11 +1,12 @@
-cmake_minimum_required(VERSION 3.8)
+cmake_minimum_required(VERSION 3.5)
 project(robot_bombero_safety)
 
 find_package(ament_cmake REQUIRED)
 find_package(rclcpp REQUIRED)
 find_package(std_msgs REQUIRED)
-find_package(sensor_msgs REQUIRED)
+find_package(geometry_msgs REQUIRED)
 
+# Incluir el directorio de cabeceras
 include_directories(include)
 
 add_executable(safety_node src/safety_node.cpp)
@@ -13,10 +14,11 @@ add_executable(safety_node src/safety_node.cpp)
 ament_target_dependencies(safety_node
   rclcpp
   std_msgs
-  sensor_msgs
+  geometry_msgs
 )
 
-install(TARGETS safety_node
+install(TARGETS
+  safety_node
   DESTINATION lib/${PROJECT_NAME}
 )
 
