Todo funcional faltante odometria

--- a/robot_bombero_bringup/config/controllers.yaml
+++ b/robot_bombero_bringup/config/controllers.yaml
@@ -1,21 +1,75 @@
 controller_manager:
   ros__parameters:
-    # Controlador del brazo servo
-    arm_controller:
-      type: "robot_bombero_controller::ArmServoController"
-      joints:
-        - "joint_waist"
-        - "joint_shoulder"
-        - "joint_elbow"
-        - "joint_wrist"
-      update_rate: 50  # Tasa de actualización en Hz
+    update_rate: 20
 
-    # Controlador mecanum para locomoción
-    mecanum_controller:
-      type: "robot_bombero_controller::MecanumController"
-      wheels:
-        - "link_fl_wheel_joint"
-        - "link_fr_wheel_joint"
-        - "link_rl_wheel_joint"
-        - "link_rr_wheel_joint"
-      update_rate: 50  # Tasa de actualización en Hz
+    mecanum_controller: 
+      type: robot_bombero_controller/MecanumController
+
+    arm_controller:
+      type: robot_bombero_controller/ArmServoController
+
+    joint_state_broadcaster:
+      type: joint_state_broadcaster/JointStateBroadcaster
+    
+    sensor_state_publisher_controller:
+      type: robot_bombero_controller/SensorStatePublisherController
+
+
+
+mecanum_controller:
+  ros__parameters:
+    joints:
+      - link_fl_wheel_joint
+      - link_fr_wheel_joint
+      - link_rl_wheel_joint
+      - link_rr_wheel_joint
+    wheel_radius: 0.0325
+    wheel_base_x: 0.17
+    wheel_base_y: 0.15
+    command_interfaces:
+      - "velocity"
+    state_interfaces:
+      - "velocity"
+      - "position"  
+
+arm_controller:
+  ros__parameters:
+    joints:
+      - joint_waist
+      - joint_shoulder
+      - joint_elbow
+      - joint_wrist
+    pump_joint: joint_water_pump
+    command_interfaces:
+      - position
+    state_interfaces:
+      - position
+    pump_command_interface:
+      - effort
+    pump_state_interface:
+      - effort
+      - position  
+
+
+# joint_state_broadcaster:
+#   ros__parameters:
+#     joints:
+#       - link_fl_wheel_joint
+#       - link_fr_wheel_joint
+#       - link_rl_wheel_joint
+#       - link_rr_wheel_joint
+#       - joint_waist
+#       - joint_shoulder
+#       - joint_elbow
+#       - joint_wrist
+#       - joint_water_pump
+#     interfaces:
+#       - position
+#       - velocity
+#       - effort
+#     map_interface_to_joint_state:
+#       position: position
+#       velocity: velocity
+#       effort: effort
+#     use_local_topics: true
+
