--- a/robot_bombero_control_node/CMakeLists.txt
+++ b/robot_bombero_control_node/CMakeLists.txt
@@ -7,25 +7,17 @@ find_package(rclcpp REQUIRED)
 find_package(controller_manager REQUIRED)
 find_package(hardware_interface REQUIRED)
 find_package(pluginlib REQUIRED)
-find_package(robot_bombero_controller REQUIRED)
 find_package(std_msgs REQUIRED)
+find_package(sensor_msgs REQUIRED)             # Añadido sensor_msgs
 find_package(robot_bombero_hardware REQUIRED)
 find_package(robot_bombero_description REQUIRED)
 
-
-
-
-# Incluir headers si vas a usar archivos en include/
+# Incluir headers si tienes archivos en include/
 include_directories(
   include
   ${rclcpp_INCLUDE_DIRS}
-  ${robot_bombero_hardware_INCLUDE_DIRS}  
-  /usr/include
-  /usr/local/include
+  ${robot_bombero_hardware_INCLUDE_DIRS}
 )
-include_directories(${robot_bombero_controller_INCLUDE_DIRS})
-
-
 
 # Ejecutable principal
 add_executable(firebot_control_node src/firebot_control_node.cpp)
@@ -36,9 +28,8 @@ ament_target_dependencies(firebot_control_node
   controller_manager
   hardware_interface
   pluginlib
-  geometry_msgs 
   std_msgs
-  robot_bombero_controller
+  sensor_msgs                          # Añadido sensor_msgs aquí también
   robot_bombero_hardware
 )
 
@@ -47,13 +38,9 @@ install(TARGETS firebot_control_node
   DESTINATION lib/${PROJECT_NAME}
 )
 
-# Si usas headers personalizados (futuros), instala include/
+# Instalar headers si tienes
 install(DIRECTORY include/
   DESTINATION include/
 )
-
-
-install(TARGETS firebot_control_node
-  DESTINATION lib/${PROJECT_NAME})
 
 ament_package()
