--- a/robot_bombero_safety/CMakeLists.txt
+++ b/robot_bombero_safety/CMakeLists.txt
@@ -1,25 +1,28 @@
 cmake_minimum_required(VERSION 3.5)
 project(robot_bombero_safety)
 
+# Default to C++17
+if(NOT CMAKE_CXX_STANDARD)
+  set(CMAKE_CXX_STANDARD 17)
+endif()
+
 find_package(ament_cmake REQUIRED)
 find_package(rclcpp REQUIRED)
-find_package(std_msgs REQUIRED)
 find_package(geometry_msgs REQUIRED)
+find_package(sensor_msgs REQUIRED)
+find_package(std_msgs REQUIRED)
 
-# Incluir el directorio de cabeceras
 include_directories(include)
 
 add_executable(safety_node src/safety_node.cpp)
-
 ament_target_dependencies(safety_node
   rclcpp
-  std_msgs
   geometry_msgs
+  sensor_msgs
+  std_msgs
 )
 
-install(TARGETS
-  safety_node
-  DESTINATION lib/${PROJECT_NAME}
-)
+install(TARGETS safety_node
+  DESTINATION lib/${PROJECT_NAME})
 
 ament_package()
