--- a/robot_bombero_safety/package.xml
+++ b/robot_bombero_safety/package.xml
@@ -1,20 +1,18 @@
 <?xml version="1.0"?>
-<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
 <package format="3">
   <name>robot_bombero_safety</name>
-  <version>0.0.0</version>
-  <description>TODO: Package description</description>
-  <maintainer email="sofia.castano@uao.edu.co">sofia</maintainer>
-  <license>TODO: License declaration</license>
+  <version>0.1.0</version>
+  <description>Safety node for robot bombero: monitors IR and IMU sensors and stops robot if obstacle or tilt detected.</description>
+
+  <maintainer email="tu_email@example.com">Tu Nombre</maintainer>
+  <license>Apache-2.0</license>
 
   <buildtool_depend>ament_cmake</buildtool_depend>
 
   <depend>rclcpp</depend>
-  <depend>std_msgs</depend>
+  <depend>geometry_msgs</depend>
   <depend>sensor_msgs</depend>
-
-  <test_depend>ament_lint_auto</test_depend>
-  <test_depend>ament_lint_common</test_depend>
+  <depend>std_msgs</depend>
 
   <export>
     <build_type>ament_cmake</build_type>
