--- a/robot_bombero_controller/CMakeLists.txt
+++ b/robot_bombero_controller/CMakeLists.txt
@@ -15,7 +15,9 @@ find_package(pluginlib REQUIRED)
 find_package(realtime_tools REQUIRED)
 find_package(sensor_msgs REQUIRED)
 find_package(std_msgs REQUIRED)
-
+find_package(geometry_msgs REQUIRED)
+find_package(nav_msgs REQUIRED)
+find_package(tf2_ros REQUIRED)
 
 include_directories(include)
 
@@ -34,6 +36,9 @@ ament_target_dependencies(${PROJECT_NAME}
   realtime_tools
   sensor_msgs
   std_msgs
+  geometry_msgs
+  nav_msgs
+  tf2_ros
 )
 
 pluginlib_export_plugin_description_file(controller_interface plugins.xml)
