Formato de nodos de vision actualizados

--- a/robot_bombero_vision/package.xml
+++ b/robot_bombero_vision/package.xml
@@ -17,6 +17,7 @@
   <exec_depend>python3-opencv</exec_depend>
   <exec_depend>python3-smbus</exec_depend>
   <exec_depend>python3-numpy</exec_depend>
+  <exec_depend>python3-smbus</exec_depend>
 
   <!-- Dependencia para pruebas unitarias (si se quiere usar) -->
   <exec_depend>python3-pytest</exec_depend>
